# site-doctor

./: .gitignore  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sitedoctor/: __init__.py  banner.py  checks.py  cli.py  crawler.py  links.py  parser.py  render.py  report.py  reporters.py  scoring.py  sitemap.py
tests/: test_banner.py  test_checks.py  test_crosspage.py  test_links.py  test_parser.py  test_reporters.py  test_scoring.py  test_security.py  test_sitemap.py
