[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site-doctor"
version = "0.3.1"
description = "Crawl a website and audit SEO, accessibility, performance & broken links — zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aashish Bharti" }]
keywords = ["seo", "accessibility", "a11y", "performance", "web", "audit", "crawler", "cli", "lighthouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aashishbharti04/site-doctor"
Issues = "https://github.com/aashishbharti04/site-doctor/issues"

[project.scripts]
site-doctor = "sitedoctor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/sitedoctor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
